--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-style-loader": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
