--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "element-ui": "^1.3.4",
+    "simplemde": "^1.11.2",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-simplemde": "^0.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
