--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^1.3.4",
+    "marked": "^0.3.6",
     "simplemde": "^1.11.2",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
