--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "element-ui": "^1.3.5",
     "marked": "^0.3.6",
     "vue": "^2.3.3",
