--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "element-ui": "^1.3.5",
+    "highlight.js": "^9.12.0",
     "marked": "^0.3.6",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
